Update and rename cat.php to cat.html

--- a/json/cat.html
+++ b/json/cat.html
@@ -1,3 +1,6 @@
+<html>
+<head>
+<script type="text/php">
 <?php
 	function Send($url,$postData = null)
 	{
@@ -21,3 +24,7 @@
 	}
     echo Send('{\n"image": "http://thecatapi.com/api/images/get?format=src&type=gif"\n}');
 ?>
+</script>
+</head>
+<body />
+</html>
