--- a/json/cat.html
+++ b/json/cat.html
@@ -1,29 +1,14 @@
 <html>
 <head>
-<script type="text/php">
-<?php
-	function Send($url,$postData = null)
-	{
-		global $XsrfToken;
-		$ch = curl_init();
-		curl_setopt($ch, CURLOPT_RETURNTRANSFER,1);
-		curl_setopt($ch, CURLOPT_URL,$url);
-		curl_setopt($ch, CURLOPT_SSL_VERIFYPEER, false);
-		
-		
-		if(isset($postData))
-		{
-			curl_setopt($ch, CURLOPT_POST, 1);
-			curl_setopt($ch, CURLOPT_POSTFIELDS, $postData);
-		}
-
-		$html = curl_exec ($ch);
-				
-		curl_close($ch);
-		return $html;
-	}
-    echo '{\n"image":' + Send("http://thecatapi.com/api/images/get?format=src&type=gif") + '\n}';
-?>
+<script>
+var xhttp = new XMLHttpRequest();
+xhttp.onreadystatechange=function() {
+  if (this.readyState == 4 && this.status == 200) {
+    document.write('{\n"image": "' + this.responseText + '"\n}');
+  }
+};
+xhttp.open("GET", "http://thecatapi.com/api/images/get?format=src&type=gif", true);
+xhttp.send();
 </script>
 </head>
 <body />
