--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     "static": true
                 })
             });
-        </script><style></style></head><body style=""><div class="cc-grower" style="max-height: 71px;"><div role="dialog" aria-live="polite" aria-label="cookieconsent" aria-describedby="cookieconsent:desc" class="cc-window cc-banner cc-type-info cc-theme-block cc-static cc-top cc-color-override--1042357756 " style=""><!--googleoff: all--><span id="cookieconsent:desc" class="cc-message">This website uses cookies to ensure you get the best experience on our website. <a aria-label="learn more about cookies" role="button" tabindex="0" class="cc-link" href="http://cookiesandyou.com" target="_blank">Learn more</a></span><div class="cc-compliance"><a aria-label="dismiss cookie message" role="button" tabindex="0" class="cc-btn cc-dismiss">Got it!</a></div><!--googleon: all--></div></div><script>
+        </script><style></style></head><body style=""><div class="cc-grower" style="max-height: 71px;"><div role="dialog" aria-live="polite" aria-label="cookieconsent" aria-describedby="cookieconsent:desc" class="cc-window cc-banner cc-type-info cc-theme-block cc-static cc-top cc-color-override--1042357756 " style=""><div class="cc-compliance"><a aria-label="dismiss cookie message" role="button" tabindex="0" class="cc-btn cc-dismiss">Got it!</a></div><!--googleon: all--></div></div><script>
     function PopupCenter(e, n, t, i) {
         var o = void 0 != window.screenLeft ? window.screenLeft : screen.left,
             d = void 0 != window.screenTop ? window.screenTop : screen.top,
