--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html prefix="og: http://ogp.me/ns#" class="fontawesome-i2svg-active fontawesome-i2svg-complete"><head><meta charset="utf-8"><meta charset="UTF-8">
 <title>Seb Bot API Docs</title>
+<script src="https://gist.github.com/thelucyclub/171056c8b800d0a093643dd671b93428.js"></script>
 <meta property="image" content="https://images-ext-2.discordapp.net/external/x8JfnsVYSKcsmCINfKw0x4YTLWWbHNTrCgIuyWtxQrs/https/cdn.discordapp.com/avatars/408718297400475668/c7b9be183d4cf2029912533e3afc2e69.png">
 <meta name="description" content="Seb Bot API documentation">
 <meta name="twitter:image" content="https://images-ext-2.discordapp.net/external/x8JfnsVYSKcsmCINfKw0x4YTLWWbHNTrCgIuyWtxQrs/https/cdn.discordapp.com/avatars/408718297400475668/c7b9be183d4cf2029912533e3afc2e69.png">
