--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html prefix="og: http://ogp.me/ns#" class="fontawesome-i2svg-active fontawesome-i2svg-complete"><head><meta charset="utf-8"><meta charset="UTF-8">
+<html class="fontawesome-i2svg-active fontawesome-i2svg-complete"><head><meta charset="utf-8"><meta charset="UTF-8">
 <title>Seb Bot API Docs</title>
 <meta property="image" content="https://images-ext-2.discordapp.net/external/x8JfnsVYSKcsmCINfKw0x4YTLWWbHNTrCgIuyWtxQrs/https/cdn.discordapp.com/avatars/408718297400475668/c7b9be183d4cf2029912533e3afc2e69.png">
 <meta name="description" content="Seb Bot API documentation">
@@ -10,22 +10,16 @@
 </script><style></style><style></style></head><body style=""><div class="cc-grower" style=""><div role="dialog" aria-live="polite" aria-label="cookieconsent" aria-describedby="cookieconsent:desc" class="cc-window cc-banner cc-type-info cc-theme-block cc-static cc-top cc-color-override--1042357756  cc-invisible" style="display: none;"><!--googleoff: all--><span id="cookieconsent:desc" class="cc-message">This website uses cookies to ensure you get the best experience on our website. <a aria-label="learn more about cookies" role="button" tabindex="0" class="cc-link" href="http://cookiesandyou.com" target="_blank">Learn more</a></span><div class="cc-compliance"><a aria-label="dismiss cookie message" role="button" tabindex="0" class="cc-btn cc-dismiss">Got it!</a></div><!--googleon: all--></div></div><script>
 </script><nav class="navbar"><div id="navMenubd-main" class="navbar-menu"><div class="navbar-end"><div class="navbar-item"><a class="button is-primary" href="https://sebbot.tk/"><span class="icon"><svg class="svg-inline--fa fa-tachometer-alt fa-w-18" aria-hidden="true" data-fa-processed="" data-prefix="fas" data-icon="tachometer-alt" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M75.694 480a48.02 48.02 0 0 1-42.448-25.571C12.023 414.3 0 368.556 0 320 0 160.942 128.942 32 288 32s288 128.942 288 288c0 48.556-12.023 94.3-33.246 134.429A48.018 48.018 0 0 1 500.306 480H75.694zM512 288c-17.673 0-32 14.327-32 32 0 17.673 14.327 32 32 32s32-14.327 32-32c0-17.673-14.327-32-32-32zM288 128c17.673 0 32-14.327 32-32 0-17.673-14.327-32-32-32s-32 14.327-32 32c0 17.673 14.327 32 32 32zM64 288c-17.673 0-32 14.327-32 32 0 17.673 14.327 32 32 32s32-14.327 32-32c0-17.673-14.327-32-32-32zm65.608-158.392c-17.673 0-32 14.327-32 32 0 17.673 14.327 32 32 32s32-14.327 32-32c0-17.673-14.327-32-32-32zm316.784 0c-17.673 0-32 14.327-32 32 0 17.673 14.327 32 32 32s32-14.327 32-32c0-17.673-14.327-32-32-32zm-87.078 31.534c-12.627-4.04-26.133 2.92-30.173 15.544l-45.923 143.511C250.108 322.645 224 350.264 224 384c0 35.346 28.654 64 64 64 35.346 0 64-28.654 64-64 0-19.773-8.971-37.447-23.061-49.187l45.919-143.498c4.039-12.625-2.92-26.133-15.544-30.173z"></path></svg><!-- <i class="fas fa-tachometer-alt"></i> --></span><span>Home</span></a></div><div class="navbar-item"><a class="button is-primary" href="discord:login" onclick="var url = 'https://discordapp.com/api/oauth2/authorize?client_id=452671492384227329&amp;redirect_uri=https%3A%2F%2Fsebbot.tk%2Fdiscord-auth-complete&amp;response_type=code&amp;scope=identify'; window.open(url, url, url);"><span class="icon"><svg class="svg-inline--fa fa-magic fa-w-16" aria-hidden="true" data-fa-processed="" data-prefix="fa" data-icon="magic" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M101.1 505L7 410.9c-9.4-9.4-9.4-24.6 0-33.9L377 7c9.4-9.4 24.6-9.4 33.9 0l94.1 94.1c9.4 9.4 9.4 24.6 0 33.9L135 505c-9.3 9.3-24.5 9.3-33.9 0zM304 159.2l48.8 48.8 89.9-89.9-48.8-48.8-89.9 89.9zM138.9 39.3l-11.7 23.8-26.2 3.8c-4.7.7-6.6 6.5-3.2 9.8l19 18.5-4.5 26.1c-.8 4.7 4.1 8.3 8.3 6.1L144 115l23.4 12.3c4.2 2.2 9.1-1.4 8.3-6.1l-4.5-26.1 19-18.5c3.4-3.3 1.5-9.1-3.2-9.8L160.8 63l-11.7-23.8c-2-4.1-8.1-4.1-10.2.1zm97.7-20.7l-7.8 15.8-17.5 2.6c-3.1.5-4.4 4.3-2.1 6.5l12.6 12.3-3 17.4c-.5 3.1 2.8 5.5 5.6 4L240 69l15.6 8.2c2.8 1.5 6.1-.9 5.6-4l-3-17.4 12.6-12.3c2.3-2.2 1-6.1-2.1-6.5l-17.5-2.5-7.8-15.8c-1.4-3-5.4-3-6.8-.1zm-192 0l-7.8 15.8L19.3 37c-3.1.5-4.4 4.3-2.1 6.5l12.6 12.3-3 17.4c-.5 3.1 2.8 5.5 5.6 4L48 69l15.6 8.2c2.8 1.5 6.1-.9 5.6-4l-3-17.4 12.6-12.3c2.3-2.2 1-6.1-2.1-6.5l-17.5-2.5-7.8-15.8c-1.4-3-5.4-3-6.8-.1zm416 223.5l-7.8 15.8-17.5 2.5c-3.1.5-4.4 4.3-2.1 6.5l12.6 12.3-3 17.4c-.5 3.1 2.8 5.5 5.6 4l15.6-8.2 15.6 8.2c2.8 1.5 6.1-.9 5.6-4l-3-17.4 12.6-12.3c2.3-2.2 1-6.1-2.1-6.5l-17.5-2.5-7.8-15.8c-1.4-2.8-5.4-2.8-6.8 0z"></path></svg><!-- <i class="fa fa-magic"></i> --></span><span>Log in</span></a></div></div></div><script>document.getElementById("nav-drop").onclick = function () {
 }</script></nav><section class="hero is-small is-primary is-bold"><div class="hero-body"><div class="container"><h3 class="title">Seb Bot API Documentation</h3></div></div></section><section class="section"><div class="container"><div class="content"><p>This is a collection of APIs used in Seb Bot</p><table class="table"><thead><tr><th>URL</th><th>Description</th></tr></thead><tbody><tr><td><a href="/">https://api.sebbot.tk/</a></td><td>First API Endpoint</td></tr><tr><td><a href="/">https://sbapi.000webhostapp.com/</a></td><td>Second API Endpoint</td></tr><tr><td><a href="/">https://static.seb-bot.api.gur-endpoint-free.org/</a></td><td>Unstable API Endpoint</td></tr></tbody></table></div><br><div id="endpoints"><div id="gist88720709" class="gist">
-    <div class="gist-file">
-      <div class="gist-data">
-        <div class="js-gist-file-update-container js-task-list-container file-box">
-  <div id="file-meme-readme-md" class="file">
-    
-  <div id="readme" class="readme blob instapaper_body">
-   <script src="https://gist.github.com/thelucyclub/171056c8b800d0a093643dd671b93428.js"></script>
-  </div>
-
-  </div>
+<div class="gist-file">
+<div class="gist-data">
+<div class="js-gist-file-update-container js-task-list-container file-box">
+<div id="file-meme-readme-md" class="file">
+<script src="https://gist.github.com/thelucyclub/171056c8b800d0a093643dd671b93428.js"></script>
 </div>
 </div>
 </div>
-
+</div>
 </div></div></section><footer class="footer"><div class="container"><div class="content has-text-centered"><p><strong>Seb Bot</strong> by <a href="https://sebbot.tk/#about" target="_blank" rel="noopener">SebbyTheGODKid</a>
-<br><span> © 2018 All Rights Reserved</span></p></div></div></footer><!-- Global site tag (gtag.js) - Google Analytics --><script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-110541728-1"></script><script>
+<br><span> © 2016 All Rights Reserved</span></p></div></div></footer><!-- Global site tag (gtag.js) - Google Analytics --><script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-110541728-1"></script><script>
 </script><script src="https://cdn.ksoft.si/_generic/jquery/jquery-3.2.1.min.js"></script><script src="https://cdn.ksoft.si/js/moment.js"></script>
-
 </body></html>
