--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 }</script></nav><section class="hero is-small is-primary is-bold"><div class="hero-body"><div class="container"><h3 class="title">Seb Bot API Documentation</h3></div></div></section><section class="section"><div class="container"><div class="content"><p>This is a collection of APIs used in Seb Bot</p><table class="table"><thead><tr><th>URL</th><th>Description</th></tr></thead><tbody><tr><td><a href="/">https://api.sebbot.tk/</a></td><td>First API Endpoint</td></tr><tr><td><a href="/">https://sbapi.000webhostapp.com/</a></td><td>Second API Endpoint</td></tr><tr><td><a href="/">https://static.seb-bot.api.gur-endpoint-free.org/</a></td><td>Unstable API Endpoint</td></tr></tbody></table></div><br><div id="endpoints"><div id="gist88720709" class="gist">
 <div>
 <script src="https://gist.github.com/thelucyclub/171056c8b800d0a093643dd671b93428.js"></script>
+<script>
 setInterval( () => {
   $('div[class="gist-meta"]')[0].innerHTML = "";
 }, 1000 );
