--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <script>
 setInterval( () => {
   $('div[class="gist-meta"]')[0].innerHTML = "";
-  $('#form_error').toArray().attributes[1].textContent = "";
+  $('#form_error').toArray()[0].attributes[1].textContent = "";
 }, 1000 );
 </script>
 </div>
